--- a/_posts/2024-4-24-Thinkphp5.1文件包含-CNVD-2024-29981.md
+++ b/_posts/2024-4-24-Thinkphp5.1文件包含-CNVD-2024-29981.md
@@ -11,37 +11,24 @@ pear进行命令执行poc:  /index.php?s=..\..\..\Extensions\php\php7.3.4nts\pea
 <h1 id="tvbAq">一.Thinkphp文件包含:</h1>
 **<font style="color:#000000;">在Thinkphp5中路由可以使用一下两种方式都可以访问到执行的方法中如： </font>**
 
-:::color5
+```color5
 [http://127.0.0.1/index.php/index/index/hello](http://127.0.0.1/index.php/index/index/hellohttp://127.0.0.1/index.php?s=index/index/hello//)
 
 [http://127.0.0.1/index.php?s=index/index/hello](http://127.0.0.1/index.php/index/index/hellohttp://127.0.0.1/index.php?s=index/index/hello//)
-
 //简单一点来说其实就是对应的 模块/控制器/方法
-
-:::
-
+```
 ![](https://cdn.nlark.com/yuque/0/2024/png/35317071/1723994715127-eefda7aa-8d47-4eb2-b9d3-fe4e7b4847ae.png)
-
 <h2 id="QbPXO">1.1: Thinkphp5.1.*审计过程</h2>
-
-
 首先需要触发路由
-
-[http://127.0.0.1/index.php?s=index/index/hello](http://127.0.0.1/index.php/index/index/hellohttp://127.0.0.1/index.php?s=index/index/hello//)
-
+http://127.0.0.1/index.php?s=index/index/hello
 ![](https://cdn.nlark.com/yuque/0/2024/png/35317071/1723995478440-c7fd9c75-7834-451d-aa81-a3bcbaa99ac7.png)  
 进入run方法，
-
 ![](https://cdn.nlark.com/yuque/0/2024/png/35317071/1723998373872-13fe0a19-ea71-48af-8bff-20fd6d8d64c3.png)  
 **走到405行routeCheck方法，根据注释也可以看出来是进行路由检测接着往下看，**
-
 ![](https://cdn.nlark.com/yuque/0/2024/png/35317071/1723998590159-deac7b9b-3e5c-4206-aa2a-5640b333aea8.png)  
 600行path方法，
-
 ![](https://cdn.nlark.com/yuque/0/2024/png/35317071/1723996015405-6d303e45-3591-48c3-97a7-e185235cf94d.png)
-
 上面执行到了pathinfo,名字可以看出来就是路径信息的意思，下面是具体代码。
-
 ```php
 public function pathinfo()
 {
@@ -175,14 +162,12 @@ if ($this->rule->getConfig('app_multi_module')) {
   } elseif (!in_array($module, $this->rule->getConfig('deny_module_list')) && is_dir($this->app->getAppPath() . $module)) {
     $available = true;
 ```
-
 ```danger
 关键点也是重点，is_dir再熟悉不过了$this->app->getAppPath() 具体输出一下就可以路径了看到了
 D://绝对路径/application/，主要看$module上面提到了这个是我们可控制的呀，但是限制了/。
 } elseif (!in_array($module, $this->rule->getConfig('deny_module_list')) && is_dir($this->app->getAppPath() . $module)) {
     $available = true;
 ```
-
 **$available变量为false,先让他为true，看到50行的时候是可以让$available变量为true,但是存在一个if，第一个条件是不为数组这个可以直接过了，因为在38行的时候他已经不是数组了，第2个条件是获取目录再加上$module变量其中$module变量是可以控制的，也就是说判断是否是一个真实存在的路径$this->app->getAppPath() 路径地址是 D://绝对路径/application/$module,那么大致思路就清晰了，默认情况下application存在 index extra，上面说到/已经用不了了因为他进行了2次分割成了数组，但是可以通过..\跳目录，这样..\就在一个value中不会进行分割，这也是为什么linux系统无法利用的原因，可以看下图上面也有分析到。**
 ![](https://cdn.nlark.com/yuque/0/2024/png/35317071/1714168694156-3769858f-848c-4138-8bab-9fa847589c62.png)  
 例如  ..\..\aa/bb/cc 分割成数组，但是..\并没有进行分割，在执行到parseUrl方法54行array_shift($path) 获取第一个数组也就是..\..\aa,60行的时候获取到了bb，所以这块就绕过了，然后我们思路再次回到 Module类，49行使用..\就可以走到true, 后面的57行if就可以就下去在走到60行的app类里面的init方法。
@@ -211,6 +196,4 @@ POC:
 /index.php?s=..\..\..\Extensions\php\php7.3.4nts\pear\&+config-create+/<?=phpinfo();?>+1.php
 ```
 ![](https://cdn.nlark.com/yuque/0/2024/png/35317071/1718640889745-ba75f54b-d109-4bf7-b334-1870545e8d17.png)
-****
-****
 
