--- a/_posts/2024-4-24-Thinkphp5.1文件包含-CNVD-2024-29981.md
+++ b/_posts/2024-4-24-Thinkphp5.1文件包含-CNVD-2024-29981.md
@@ -1,3 +1,8 @@
+---
+layout: post
+title: "Thinkphp5.1文件包含-CNVD-2024-29981"
+author: "xinyisleep"
+---
 ```info
 time:   4.24
 测试版本:   thinkphp 5.1.41
