--- a/2025.md
+++ b/2025.md
@@ -1,14 +1,14 @@
 ---
 layout: default
-title: 2024 年发布的文章
-permalink: /2024/
+title: 2025 年发布的文章
+permalink: /2025/
 ---
 
-<h1>2024 年发布的文章之青春篇</h1>
+<h1>2025 年发布的文章之成熟阳光篇</h1>
 
 <ul>
   {% for post in site.posts %}
-    {% if post.date | date: "%Y" == "2024" %}
+    {% if post.date | date: "%Y" == "2025" %}
       <li>
         <a href="{{ post.url }}">{{ post.title }}</a> - {{ post.date | date: "%B %d, %Y" }}
       </li>
