--- a/2024.md
+++ b/2024.md
@@ -8,10 +8,12 @@ permalink: /2024/
 
 <ul>
   {% for post in site.posts %}
-    {% if post.date | date: "%Y" == "2024" %}
+    {% assign year = post.date | date: "%Y" %}
+    {% if year == "2024" %}
       <li>
         <a href="{{ post.url }}">{{ post.title }}</a> - {{ post.date | date: "%B %d, %Y" }}
       </li>
     {% endif %}
   {% endfor %}
 </ul>
+
