--- a/2025.md
+++ b/2025.md
@@ -8,7 +8,8 @@ permalink: /2025/
 
 <ul>
   {% for post in site.posts %}
-    {% if post.date | date: "%Y" == "2025" %}
+    {% assign year = post.date | date: "%Y" %}
+    {% if year == "2024" %}
       <li>
         <a href="{{ post.url }}">{{ post.title }}</a> - {{ post.date | date: "%B %d, %Y" }}
       </li>
