--- a/_posts/2024-7-15-Thinkphp3.文件包含-CNVD-2024-39045.md
+++ b/_posts/2024-7-15-Thinkphp3.文件包含-CNVD-2024-39045.md
@@ -264,7 +264,7 @@ Storage::load跟进去看看
 <h1 id="sPfOM">三.漏洞利用</h1>
 ```tips
 首先在根目录下面创建一个文件名字随便但是必须是html扩展名，内容为php的代码,就phpinfo吧
-poc: [http://127.0.0.1/index.php?m=Home&c=index&a=../../../../../2](http://127.0.0.1/index.php?m=Home&c=index&a=../../../../../2)
+poc: http://127.0.0.1/index.php?m=Home&c=index&a=../../../../../2
 ```
 
 ![](https://xinyisleep.github.io/img/2024/thinkphp3/1743340676774.jpg)
