--- a/_posts/2024-10-26-禅道二次注入到RCE(Version_=20.0.beta2).md
+++ b/_posts/2024-10-26-禅道二次注入到RCE(Version_=20.0.beta2).md
@@ -1,7 +1,7 @@
 ---
 layout: post
 date: 2025-1-24
-title: "禅道二次注入到RCE(Version_=20.0.beta2)"
+title: "禅道二次注入到RCE(Version-20.0.beta2)"
 author: "XinYiSleep"
 ---
 <h1 id="XvOCI">一.基础信息</h1>
