--- a/_posts/2024-4-24-Thinkphp5.1文件包含-CNVD-2024-29981.md
+++ b/_posts/2024-4-24-Thinkphp5.1文件包含-CNVD-2024-29981.md
@@ -4,6 +4,8 @@ date: 2024-4-24
 title: "Thinkphp5.1文件包含-CNVD-2024-29981"
 author: "XinYiSleep"
 ---
+<h1 id="XvOCI">一.基础信息</h1>
+
 ```info
 time:   4.24
 测试版本:   thinkphp 5.1.41
