--- a/_posts/2024-10-26-禅道二次注入到RCE(Version_=20.0.beta2).md
+++ b/_posts/2024-10-26-禅道二次注入到RCE(Version_=20.0.beta2).md
@@ -275,9 +275,8 @@ vision=%27%3Binsert+into+zt_user+%28type%2Caccount%2Cpassword%2Crealname%29+valu
 账号：xinyi
 密码：xinyiGEGE521
 ```
-<h3 id="a6FcP">3.2：写webshell</h3>
+<h3 id="a6FcP">3.2：getshell</h3>
 ```
-禅道是不知道路径的，但是进入后台之后随随便便就能shell,下面只是作为参考，下午写到凌晨1点，断断续续，打王者写记录 打王者写记录。
-好了看累了吧喝杯茶暖暖胃，后面看个后台洞和这个配合一下。
+getshell就不写了因为后台shell一堆而且版本不同也有些差异。
 ```
 
