--- a/2024.md
+++ b/2024.md
@@ -11,7 +11,7 @@ permalink: /2024/
     {% assign year = post.date | date: "%Y" %}
     {% if year == "2024" %}
       <li>
-        <a href="{{ post.url }}">{{ post.title }}</a> - {{ post.date | date: "%B %d, %Y" }}
+        <a href="{{ post.url }}">{{ post.title }}</a> - <small>{{ post.date | date: "%Y-%m-%d" }}</small>
       </li>
       
     {% endif %}
