--- a/2025.md
+++ b/2025.md
@@ -11,7 +11,7 @@ permalink: /2025/
     {% assign year = post.date | date: "%Y" %}
     {% if year == "2025" %}
       <li>
-        <a href="{{ post.url }}">{{ post.title }}</a> - {{ post.date | date: "%B %d, %Y" }}
+        <a href="{{ post.url }}">{{ post.title }}</a> - <small>{{ post.date | date: "%Y-%m-%d" }}</small>
         </br>
       </li>
     {% endif %}
