--- a/_posts/2024-4-24-Thinkphp5.1文件包含-CNVD-2024-29981.md
+++ b/_posts/2024-4-24-Thinkphp5.1文件包含-CNVD-2024-29981.md
@@ -3,6 +3,7 @@ layout: post
 date: 2024-4-24
 title: "Thinkphp5.1文件包含-CNVD-2024-29981"
 author: "XinYiSleep"
+category: Java
 ---
 <h1 id="XvOCI">一.基础信息</h1>
 
