--- a/_posts/2024-7-15-Thinkphp3.文件包含-CNVD-2024-39045.md
+++ b/_posts/2024-7-15-Thinkphp3.文件包含-CNVD-2024-39045.md
@@ -3,7 +3,7 @@ layout: post
 date: 2024-7-15
 title: "Thinkphp3文件包含-CNVD-2024-39045"
 author: "XinYiSleep"
-category: Java
+category: PHP
 ---
 <h1 id="OuKbk">一.基础信息</h1>
 
