--- a/_posts/2025-5-13-内存马-1基础.md
+++ b/_posts/2025-5-13-内存马-1基础.md
@@ -136,8 +136,33 @@ JAVA代码
 <a href="hello-servlet">Hello Servlet</a>
 </body>
 </html>
-
 ```
+<h3 id="vLWjl">3.2：JSP内置对象(指令)</h3>
+
+JSP有九大内置对象，他们能够在客户端和服务器端交互的过程中分别完成不同的功能。其特点如下
+
++ 由 JSP 规范提供，不用编写者实例化
++ 通过 Web 容器实现和管理
++ 所有 JSP 页面均可使用
++ 只有在脚本元素的表达式或代码段中才能使用
+
+| 对象 | 类型 | 描述 |
+| --- | --- | --- |
+| request | javax.servlet.http.HttpServletRequest | 获取用户请求信息 |
+| response | javax.servlet.http.HttpServletResponse | 响应客户端请求，并将处理信息返回到客户端 |
+| response | javax.servlet.jsp.JspWriter | 输出内容到 HTML 中 |
+| session |  javax.servlet.http.HttpSession | 用来保存用户信息 |
+| application | javax.servlet.ServletContext | 所有用户共享信息 |
+| config | javax.servlet.ServletConfig | 这是一个 Servlet 配置对象，用于 Servlet 和页面的初始化参数 |
+| pageContext | javax.servlet.jsp.PageContext | JSP 的页面容器，用于访问 page、request、application 和 session 的属性 |
+| page |  javax.servlet.jsp.HttpJspPage | 类似于 Java 类的 this 关键字，表示当前 JSP 页面 |
+| exception | java.lang.Throwable |  	该对象用于处理 JSP 文件执行时发生的错误和异常；只有在 JSP 页面的 page 指令中指定 isErrorPage 的取值 true 时，才可以在本页面使用 exception 对象 |
+```java
+//例子
+<%@ page contentType="text/html;charset=UTF-8" language="java" %>
+<%@ page import="javax.servlet.http.HttpServletRequest" %>
+```
+
 ```
 后面遇到什么在进行补上。
 ```
