--- a/_posts/2025-5-18-EL表达式注入.md
+++ b/_posts/2025-5-18-EL表达式注入.md
@@ -1,7 +1,7 @@
 ---
 layout: post
-date: 2025-5-24
-title: "EL表达式注入-学习"
+date: 2025-5-18
+title: "EL表达式注入(CVE-2011-2730)-学习"
 author: "XinYiSleep"
 category: Java
 ---
