--- a/_posts/2025-6-10-复现分析log4j-2.14.1-RCE.md
+++ b/_posts/2025-6-10-复现分析log4j-2.14.1-RCE.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 date: 2025-6-10
-title: "复现分析log4j-2.14.1-RCE-CVE-2021-44228"
+title: "分析log4j<=2.14.1-RCE-CVE-2021-44228"
 author: "XinYiSleep"
 category: Java
 ---
