--- a/_posts/2024-4-24-Thinkphp5.1文件包含-CNVD-2024-29981.md
+++ b/_posts/2024-4-24-Thinkphp5.1文件包含-CNVD-2024-29981.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 date: 2024-4-24
-title: "Thinkphp5.1文件包含-CNVD-2024-29981"
+title: "Thinkphp5.1文件包含-CVE-2025-50706(CNVD-2024-29981)"
 author: "XinYiSleep"
 category: PHP
 ---
