--- a/_posts/2024-7-15-Thinkphp3.文件包含-CNVD-2024-39045.md
+++ b/_posts/2024-7-15-Thinkphp3.文件包含-CNVD-2024-39045.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 date: 2024-7-15
-title: "Thinkphp3文件包含-CNVD-2024-39045"
+title: "Thinkphp3文件包含-CVE-2025-50707(CNVD-2024-39045)"
 author: "XinYiSleep"
 category: PHP
 ---
