--- a/_posts/2025-8-26-JDK7u21原生链-浅析.md
+++ b/_posts/2025-8-26-JDK7u21原生链-浅析.md
@@ -5,8 +5,8 @@ title: "JDK7u21原生链-浅析"
 author: "XinYiSleep"
 category: Java
 ---
+<h1 id="pCrd7">1.基本信息</h1>
 
-一.基础信息
 ```
 这个链是无需任何第三方包的，也就是原生的JDK7u21的链，其中会涉及到碰撞问题。
 这一段话摘自 Y4tacker 师傅的文章
@@ -16,7 +16,7 @@ category: Java
 中的每个方法并调用，那么就会触发 `newTransform()` 或 `getOutputProperties()` 方法导致字节码加载任意代码的执行
 ```
 
-二.浅析
+<h1 id="Vq7R8">浅析</h1>
 ```
 在AnnotationInvocationHandler#equalsImpl中存在一个反射操作图一，我们可以执行任意类的方法，先来看看153行的getMemberMethods()方法图二，
 可以看到只需要修改type就可以获取类的所有方法通过反射，刚好我们可以通过构造方法来修改图三，ok到这里我们自己模拟执行一下代码一。
