--- a/_posts/2025-9-20-Top漏洞审计方法.md
+++ b/_posts/2025-9-20-Top漏洞审计方法.md
@@ -15,6 +15,9 @@ category: Java
 4.SSRF漏洞
 5.SQL注入漏洞
 6.文件相关漏洞(文件上传，文件读取)
+7.XXE
+8.命令执行
+9.JSP文件包含
 ```
 <h2 id="Wr0Js">1.1:：springmv快速创建</h2>
 ```
