--- a/_posts/2025-9-20-Top漏洞审计方法.md
+++ b/_posts/2025-9-20-Top漏洞审计方法.md
@@ -631,30 +631,30 @@ SpringMVC常用上传类:
 6.4：文件删除:
 
     jar包class: org.apache.commons.io.FileUtils
-    deleteDirectory()
-    deleteQuietly()
-    cleanDirectory()
-    forceDelete()
+        deleteDirectory()
+        deleteQuietly()
+        cleanDirectory()
+        forceDelete()
     jar包class: java.io.File	delete()
 6.5：文件复制:
 
-    <font style="color:#000;">jar包class: org.apache.commons.io.IOUtils</font>
-    <font style="color:#000;">copy()</font>
-    <font style="color:#000;">copyLarge()</font>
+    jar包class: org.apache.commons.io.IOUtils
+        copy()
+        copyLarge()
     jar包class: org.apache.commons.io.FileUtils
-    copyFile()
-    copyFileToDirectory()
-    copyDirectoryToDirectory()
-    copyDirectory()
-    copyURLToFile()
+        copyFile()
+        copyFileToDirectory()
+        copyDirectoryToDirectory()
+        copyDirectory()
+        copyURLToFile()
     jar包class: org.springframework.util.FileCopyUtils
-    copy
+        copy
     jar包class: org.springframework.util.StreamUtils
-    copy
+        copy
     jar包class: java.nio.channels.FileChannel
-    transferTo()
+        transferTo()
     jar包class: java.nio.file.Files
-    copy()
+        copy()
 ```
 
 <h2 id="z9YMX">6.1：文件上传</h2>
