--- a/_posts/2025-7-26-ROME链-分析.md
+++ b/_posts/2025-7-26-ROME链-分析.md
@@ -24,7 +24,7 @@ category: Java
 ```java
 	BadAttributeValueExpException.readObject
 		EqualsBean.hashCode
-			beanHashCode.EqualsBean
+			EqualsBean.beanHashCode
 				ToStringBean.toString
 					TemplatesImpl.getOutputProperties
 						TemplatesImpl.newTransformer
@@ -111,7 +111,7 @@ Object value = pReadMethod.invoke(this._obj, NO_PARAMS);
 ![](https://xinyisleep.github.io/img/2025/ROME/12.png)
 
 ```
-其实这里的getOutputProperties是重实现了Templates接口的方法，所以我们只需要指定的是Templates接口就行了舒坦(图一)，
+其实这里的getOutputProperties是重新实现了Templates接口的方法，所以我们只需要指定的是Templates接口就行了舒坦(图一)，
 ok那就模拟执行一下(代码一),下面就在网上走EqualsBean.beanHashCode()中执行了toString,那么又在同类中找到了hashCode()执行了beanHashCode()，
 到这里要是一路跟着学习过来的师傅，应该已经知道了，DNSLOG这个链不就是执行的hashCode()吗？没错的，那么这里有个问题就是图三中
 if (!beanClass.isInstance(obj))就是检测这个对象是不是这个类的实例，那么就写链吧。
