--- a/_posts/2025-12-2-C3P0反序列化链.md
+++ b/_posts/2025-12-2-C3P0反序列化链.md
@@ -154,7 +154,7 @@ unserialize("ser.bin");
 虽说这个链很简单但是你不去走一遍很难理解。
 ```
 
-<h1 id="estBr">二:fastjson链</h1>
+<h1 id="estBr">三:fastjson链</h1>
 ```
 也不难JndiRefForwardingDataSource#dereference中存在JNDI注入图一，this.getJndiName()是可以控制的，
 这里我看了其他师傅的文章在fastjson反序列化的时候通过Setter进行触发了，没错确实setLogWriter可以调用但是都多余，
@@ -176,7 +176,7 @@ String json2 = "{\"@type\":\"com.mchange.v2.c3p0.JndiRefForwardingDataSource\",\
 JSONObject jsonObject = JSON.parseObject(json2);
 System.out.println(jsonObject);
 ```
-<h1 id="SL8jH">三:C3P0+ROME链</h1>
+<h1 id="SL8jH">四:C3P0+ROME链</h1>
 ```
 一路跟着学习过来的哥们儿都知道，既然执行了Getter那么不就可以通过ROME链起来了吗？没错确实可以，
 这个是我在写文章的时候想到的也是没有看任何文章的，但是我想这应该已经有师傅们都看到了，无所谓刚好想到就写了，
